--- a/src/app/header/header.comonent.html
+++ b/src/app/header/header.comonent.html
@@ -1,3 +1,36 @@
-<header>
-  <p>Hi from header</p>
-</header>
+<nav class="navbar navbar-default">
+  <div class="container">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a href="#" class="navbar-brand">Recipe Book</a>
+      </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="#">Recipes</a></li>
+          <li><a href="#">Shopping List</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="dropdown">
+            <a
+              href="#"
+              class="dropdown-toggle"
+              data-toggle="dropdown"
+              role="button"
+              aria-haspopup="true"
+              aria-expanded="false"
+              >Manage <span class="caret"></span
+            ></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Save data</a></li>
+              <li><a href="#">Fetched data</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+  </div>
+  <!-- /.container-fluid -->
+</nav>
