--- a/src/app/header/header.comonent.html
+++ b/src/app/header/header.comonent.html
@@ -4,12 +4,12 @@
       <div class="navbar-header">
         <a href="#" class="navbar-brand">Recipe Book</a>
       </div>
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li><a href="#">Recipes</a></li>
-          <li><a href="#">Shopping List</a></li>
+          <li><a href="#" (click)="onSelect('recipe')">Recipes</a></li>
+          <li>
+            <a href="#" (click)="onSelect('shopping-list')">Shopping List</a>
+          </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
