--- a/src/app/header/header.comonent.html
+++ b/src/app/header/header.comonent.html
@@ -6,15 +6,17 @@
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li><a routerLink="/recipes">Recipes</a></li>
-          <li>
+          <li routerLinkActive="active">
+            <a routerLink="/recipes">Recipes</a>
+          </li>
+          <li routerLinkActive="active">
             <a routerLink="/shopping-list">Shopping List</a>
           </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown" appDropdown>
             <a
-              href="#"
+              style="cursor: pointer;"
               class="dropdown-toggle"
               data-toggle="dropdown"
               role="button"
@@ -23,8 +25,8 @@
               >Manage <span class="caret"></span
             ></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Save data</a></li>
-              <li><a href="#">Fetched data</a></li>
+              <li><a style="cursor: pointer;">Save data</a></li>
+              <li><a style="cursor: pointer;">Fetched data</a></li>
             </ul>
           </li>
         </ul>
